<resources>
    <string name="app_name">SocialSync</string>
    <string name="appName">Social Sync!</string>
    <string name="events">Events</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <!-- Change Event Time-->
    <string name="change_time">Change Time</string>
    <string name="choose_time">Choose Available Times</string>
    <string name="save_time">Save Times</string>
    <string name="change_settings">Change Settings</string>
    <string name="set_event_time">Set Event Time</string>
    <string name="cancel_event">Cancel Event</string>
    <string name="defaultProperties">"Date:\nStart Time:\nEnd Time:\nJoin CODE: ----"</string>
    <string name="defaultDate">"XXX\n99"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_dashboard">Hello dashboard</string>
    <string name="hello_events">Hello events</string>
    <string name="hello_profile">Hello profile</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in">Sign In</string>
    <string name="new_event">NEW EVENT</string>
    <string name="join">Join</string>
    <string name="_2137">1234abc</string>
    <string name="button_to_add_events">button to add events</string>
    <string name="upcoming">Upcoming</string>
    <string name="join_code">Join Code</string>
    <string name="calendar_export">Calendar Export</string>
    <string name="editDefault">Edit Default Time</string>
    <string name="display_name">Display Name</string>
    <string name="change_display_photo">Change Photo</string>
    <string name="change_display_name">Change Name</string>
    <string name="log_out">Log Out</string>
    <string name="choose_dates">CHOOSE DATES</string>
    <string name="public_events">Public Events</string>
    <string name="x">X</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
    <string name="fri">FRI</string>
    <string name="thu">THU</string>
    <string name="wed">WED</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="choose_specfic_days">Choose Specfic Days</string>
    <string name="default_web_client_id">528899061837-9k3r3d9bs4hcjugio51kkub1mdvech27.apps.googleusercontent.com</string>
    <string name="leaveEvent">Leave</string>
    <string name="attending">Attending?</string>
    <string name="back">Back</string>
    <string name="push_notifications">Push Notifications?</string>

</resources>