<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/prim1"
    android:orientation="vertical"
    >


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">
    <TextView
        android:id="@+id/changeTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_time"
        android:textSize="25sp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dateRecyclerView"
        android:layout_width="match_parent"
        tools:listitem="@layout/date_item"
        android:orientation="horizontal"
        android:layout_height="90sp"
        android:layout_marginBottom="5dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/timeslotsRecyclerView"
        android:layout_width="407dp"
        android:layout_height="400dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/changeSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/timeslot_item"
        android:layout_marginBottom="5dp"
        android:layout_marginVertical="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        style="@style/appButton"
        android:id="@+id/changeSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_settings"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:layout_marginBottom="5dp"
       />


    <androidx.appcompat.widget.AppCompatButton
        style="@style/appButtonInvalid"
        android:id="@+id/setTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_event_time"
        android:layout_gravity="center"
        android:textSize="17sp"
        android:layout_marginBottom="5dp"
       />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/appButton"
        android:backgroundTint="@color/logout"
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/cancel_event"
        android:textSize="17sp"
        android:layout_marginBottom="5dp"

        android:layout_gravity="center"
         />
    <TextView
        android:id="@+id/eventPropertiesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultProperties"
        android:textSize="16dp" />

</LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>





