<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DashboardFragment">

    <TextView
        android:id="@+id/timeTextView"
        style="@style/clock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/amPmTextView"
        style="@style/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/timeTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:theme="@style/CustomCalendarView"
        android:background="@drawable/calendar_background"
        app:layout_constraintTop_toBottomOf="@+id/timeTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:minDate="01/01/2024"/>

    <TextView
        android:id="@+id/joinCode"
        style="@style/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="12dp"
        android:text="@string/join_code"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <EditText
        android:id="@+id/roomCode"
        style="@style/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_blank"
        android:hint="@string/_2137"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="4"
        android:minWidth="175dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/joinButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinCode" />

    <Button
        android:id="@+id/joinButton"
        style="@style/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/secondary1"
        android:text="@string/join"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roomCode"
        app:layout_constraintTop_toBottomOf="@+id/joinCode" />

    <TextView
        android:id="@+id/upcoming"
        style="@style/header3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/upcoming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/roomCode" />

    <ImageView
        android:id="@+id/addEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/button_to_add_events"
        android:src="@drawable/add_event_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
